--- a/GardeningServices/app/src/main/res/layout/activity_main.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/btm_navigation"
+        >
+<!--        <com.google.android.material.button.MaterialButton-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_margin="50dp"-->
+<!--            style="@style/button"-->
+<!--            />-->
+    </FrameLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/btm_navigation"
+        android:background="@drawable/rounder_navigation_background"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</LinearLayout>
+        android:layout_alignParentBottom="true"
+        app:itemIconTint="@color/selector"
+        app:itemHorizontalTranslationEnabled="false"
+        app:itemTextColor="@color/selector"
+        android:animateLayoutChanges="false"
+        app:menu="@menu/bottom_navigation"/>
+
+</RelativeLayout>
