--- a/GardeningServices/app/src/main/res/values/colors.xml
+++ b/GardeningServices/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="Green1">#FF5DBA63</color>
+    <color name="Gray3">#FF7E7E7E</color>
+    <color name="Gray4">#FFF7FAF8</color>
+    <color name="White2">#FFF7FAF8</color>
+    <color name="Yellow">#FF4C4E4C</color>
 </resources>
