--- a/GardeningServices/app/src/main/res/drawable/borderbtlgwg.xml
+++ b/GardeningServices/app/src/main/res/drawable/borderbtlgwg.xml
@@ -2,26 +2,15 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <!-- Set màu nền-->
     <solid
         android:color="@color/white">
     </solid>
-
     <!-- đặt thuộc tính màu và độ rộng của đường viền -->
     <stroke
         android:width="0.1dp"
-        android:color="@color/NBlack3" >
+        android:color="@color/Gray3" >
     </stroke>
-    <!-- các thuộc tính căn chỉnh-->
-    <padding
-        android:left="5dp"
-        android:top="5dp"
-        android:right="5dp"
-        android:bottom="5dp" >
-    </padding>
-
-    <!-- và đây là bán kính đường tròn ở 4 góc -->
     <corners
         android:radius="2dp" >
     </corners>
