--- a/GardeningServices/app/src/main/res/drawable/borderbtsi.xml
+++ b/GardeningServices/app/src/main/res/drawable/borderbtsi.xml
@@ -4,7 +4,7 @@
     android:shape="rectangle">
     <!-- Set màu nền-->
     <solid
-        android:color="@color/NGreen1" >
+        android:color="@color/Green1" >
     </solid>
     <corners
         android:radius="5dp" >
