--- a/GardeningServices/app/src/main/res/layout/fragment_home.xml
+++ b/GardeningServices/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/header_background"
+            android:paddingBottom="10dp"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textview.MaterialTextView
@@ -27,7 +28,7 @@
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/TitleWelcome1"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 app:fontFamily="@font/open_sans_semibold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -38,60 +39,60 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:text="@string/TitleWelcome2"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 app:fontFamily="@font/open_sans"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tx_hello" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layout_search"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/layout_header">
-
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layout_search"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="15dp"
-                android:background="@drawable/search_background"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tx_welcome">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tf_search"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@null"
-                    android:hint="@string/Search"
-                    android:imeOptions="actionSearch"
-                    android:importantForAutofill="no"
-                    android:inputType="text"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="10dp"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="15dp"
+                    android:background="@drawable/search_background"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:backgroundTint="@color/Gray4"
-                    android:contentDescription="@string/app_name"
-                    android:padding="6dp"
-                    app:icon="@drawable/ic_baseline_search_24"
-                    app:iconTint="@color/Green1" />
-            </LinearLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/tf_search"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:background="@drawable/search_background"
+                        android:hint="@string/Search"
+                        android:imeOptions="actionSearch"
+                        android:importantForAutofill="no"
+                        android:inputType="text"
+                        android:paddingStart="15dp"
+                        android:paddingEnd="10dp"
+                        android:textColor="@color/black"
+                        android:textSize="16sp" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:backgroundTint="@color/Gray4"
+                        android:contentDescription="@string/app_name"
+                        android:padding="6dp"
+                        app:icon="@drawable/ic_baseline_search_24"
+                        app:iconTint="@color/Green1" />
+                </LinearLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/layout_search">
+            app:layout_constraintTop_toBottomOf="@id/layout_header">
 
             <RelativeLayout
                 android:id="@+id/relativeLayout_categories"
@@ -145,13 +146,13 @@
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_outline_person_24" />
+                            android:src="@drawable/ic_category_flowers_24"
+                            android:backgroundTint="@color/Green1"
+                            />
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Flower"
-                            android:textAlignment="center" />
+                            style="@style/categoryTextView"
+                            android:text="@string/flower"/>
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
@@ -168,13 +169,11 @@
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_outline_person_24" />
+                            android:src="@drawable/ic_category_harvest_24" />
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Flower"
-                            android:textAlignment="center" />
+                            style="@style/categoryTextView"
+                            android:text="@string/harvest"/>
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
@@ -191,13 +190,11 @@
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_outline_person_24" />
+                            android:src="@drawable/ic_category_vegetable_24"/>
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Flower"
-                            android:textAlignment="center" />
+                            style="@style/categoryTextView"
+                            android:text="@string/vegetables"/>
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
                 <com.google.android.material.card.MaterialCardView
@@ -214,13 +211,11 @@
                         <com.google.android.material.imageview.ShapeableImageView
                             android:layout_width="50dp"
                             android:layout_height="50dp"
-                            android:src="@drawable/ic_outline_person_24" />
+                            android:src="@drawable/ic_category_herbal_24" />
 
                         <com.google.android.material.textview.MaterialTextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Flower"
-                            android:textAlignment="center" />
+                            style="@style/categoryTextView"
+                            android:text="@string/herbal"/>
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
             </GridLayout>
@@ -276,19 +271,20 @@
                     android:layout_column="0">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="100dp">
+                        android:layout_height="130dp">
 
                         <LinearLayout
                             android:id="@+id/view1"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
 
                             <com.google.android.material.imageview.ShapeableImageView
 
                                 android:layout_width="50dp"
-                                android:layout_height="80dp"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
                                 android:layout_marginHorizontal="10dp"
                                 android:layout_marginVertical="10dp"
                                 android:background="@color/Green1"
@@ -296,7 +292,7 @@
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="100dp"
+                            android:layout_height="130dp"
                             android:layout_gravity="center_vertical|center_horizontal"
                             android:gravity="center"
                             android:orientation="vertical"
@@ -331,19 +327,20 @@
                     android:layout_column="1">
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="100dp">
+                        android:layout_height="130dp">
 
                         <LinearLayout
                             android:id="@+id/view2"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="match_parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
 
                             <com.google.android.material.imageview.ShapeableImageView
 
                                 android:layout_width="50dp"
-                                android:layout_height="80dp"
+                                android:layout_height="100dp"
+                                android:layout_gravity="center"
                                 android:layout_marginHorizontal="10dp"
                                 android:layout_marginVertical="10dp"
                                 android:background="@color/Green1"
@@ -351,7 +348,7 @@
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:layout_height="100dp"
+                            android:layout_height="match_parent"
                             android:layout_gravity="center_vertical|center_horizontal"
                             android:gravity="center"
                             android:orientation="vertical"
@@ -529,7 +526,7 @@
                     android:layout_column="0">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -542,6 +539,7 @@
                         <com.google.android.material.textview.MaterialTextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:text="Flower"
                             android:textAlignment="center" />
                         <com.google.android.material.textview.MaterialTextView
@@ -557,7 +555,7 @@
                     android:layout_column="1">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:gravity="center"
                         android:orientation="vertical">
@@ -585,7 +583,7 @@
                     android:layout_column="2">
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="100dp"
+                        android:layout_height="120dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:gravity="center"
                         android:orientation="vertical">
