--- a/GardeningServices/app/src/main/res/color/selector_card_view.xml
+++ b/GardeningServices/app/src/main/res/color/selector_card_view.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"
+        android:color="@color/Green1"/>
+    <item android:state_pressed="false"
+        android:color="@color/White2"/>
     <item android:state_selected="true"
         android:color="@color/Green1"/>
-    <item android:color="@color/Gray3"
-        android:state_selected="false"/>
 </selector>
