--- a/GardeningServices/app/src/main/res/color/selector_see_all.xml
+++ b/GardeningServices/app/src/main/res/color/selector_see_all.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true"
+    <item android:state_pressed="true"
         android:color="@color/Green1"/>
-    <item android:color="@color/Gray3"
-        android:state_selected="false"/>
+    <item android:color="@color/black"
+        android:state_pressed="false"/>
 </selector>
