--- a/GardeningServices/app/src/main/res/layout/activity_main.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:itemIconTint="@color/selector"
+        app:itemIconTint="@color/Green1"
         app:itemHorizontalTranslationEnabled="false"
         app:itemTextColor="@color/selector"
         android:animateLayoutChanges="false"
