--- a/GardeningServices/app/src/main/res/values/preloaded_fonts.xml
+++ b/GardeningServices/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,6 @@
         <item>@font/open_sans</item>
         <item>@font/open_sans_bold</item>
         <item>@font/open_sans_light</item>
-        <item>@font/open_sans_semibold</item>
+        <item>@font/open_sans_semi_bold</item>
     </array>
 </resources>
