--- a/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".`Sign In Activity`">
+    tools:context=".SignInActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_parent"
         android:layout_width="match_parent"
