--- a/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
+++ b/GardeningServices/app/src/main/res/layout/activity_sign_in.xml
@@ -69,7 +69,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:lines="1"
-                    android:drawableStart="@drawable/selector_email_icon"
+                    android:drawableStart="@drawable/selector_sign_email_icon"
                     android:fontFamily="@font/open_sans"
                     android:inputType="textEmailAddress"
                     android:drawablePadding="10dp"
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:lines="1"
-                    android:drawableStart="@drawable/selector_lock_icon"
+                    android:drawableStart="@drawable/selector_sign_lock_icon"
                     android:fontFamily="@font/open_sans"
                     android:drawablePadding="10sp"
                     android:hint="@string/Password" />
@@ -140,8 +140,8 @@
                 android:layout_marginLeft="25dp"
                 android:background="@drawable/border_button_login_with_google"
                 android:text="@string/Login_with_Google"
-                android:drawableStart="@drawable/ic_google"
-                android:drawableLeft="@drawable/ic_google"
+                android:drawableStart="@drawable/ic_sign_google"
+                android:drawableLeft="@drawable/ic_sign_google"
                 android:drawablePadding="10dp"
                 android:paddingLeft="20dp"
                 android:textColor="@color/Gray3"
@@ -155,7 +155,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_below="@id/button_login_with_email"
                 android:text="@string/Login_with_Facebook"
-                android:drawableStart="@drawable/ic_facebook"
+                android:drawableStart="@drawable/ic_sign_facebook"
                 android:background="@drawable/border_button_login_with_google"
                 android:drawablePadding="10sp"
                 android:paddingStart="20sp"
